Update: v1.2 Add extension icons, prevent double-loading, and improve order number extraction

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -7,8 +7,8 @@
 <body>
   <div class="container">
     <div class="header">
-      <h2>Order Data Extractor</h2>
-      <div class="version">v1.0</div>
+      <h2>Order Data Extractor For ShipStation</h2>
+      <div class="version">v1.2</div>
     </div>
     
     <div class="main-content">
@@ -32,6 +32,7 @@
         <span class="count">12</span>
       </div>
     </div>
+    <span id="Author">By Tenes <a href="https://github.com/Omar27522/ShipStation"title="ShipStation"> Github</a></span>
   </div>
   
   <script src="popup.js"></script>
